# twitter-clone

./: .gitignore  pyproject.toml
authentication/: forms.py  models.py  views.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20200907_1752.py  0002_auto_20200907_2258.py  0003_auto_20200907_1756.py
templates/: base.html  generic_form.html  index.html  notifications.html  tweet_detail.html  user_detail.html
tweet/: admin.py  forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_author.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_auto_20200907_1756.py  0003_auto_20200907_1757.py
