[tool.poetry]
name = "twitter-clone"
version = "0.1.0"
description = "It's a clone of the bird site"
authors = ["Iris Faey Hoffmeyer <hi@iris.best>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
